[gd_scene load_steps=6 format=3 uid="uid://dfn1d8oftk60q"]

[ext_resource type="Texture2D" uid="uid://bfs1un3eutsdy" path="res://Assets/BasicSprites/player.png" id="1_odlrx"]
[ext_resource type="Texture2D" uid="uid://bdbs8w6bbuq0r" path="res://Assets/BasicSprites/backgroundtile.png" id="2_pqxem"]
[ext_resource type="Script" path="res://Player/PlayerSprite.gd" id="2_w5l0o"]

[sub_resource type="Animation" id="Animation_tabaa"]
resource_name = "ResetSpellCast"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_spell_cast_over"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_llm2i"]
_data = {
"ResetSpellCast": SubResource("Animation_tabaa")
}

[node name="PlayerSprite" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_odlrx")
script = ExtResource("2_w5l0o")

[node name="RightHand" type="Sprite2D" parent="."]
position = Vector2(14, -32)
scale = Vector2(0.3, 0.5)
texture = ExtResource("2_pqxem")

[node name="LeftHand" type="Sprite2D" parent="."]
position = Vector2(-15, -32)
scale = Vector2(0.3, 0.5)
texture = ExtResource("2_pqxem")

[node name="AnimationReset" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_llm2i")
}
